# myCompiler

./: CMakeLists.txt  Grammar.txt  Makefile  README.md  ast.txt  example.txt
src/: main.cpp  program.cpp  program.hpp
src/parsing/: ast.hpp  parser.cpp  parser.hpp
src/tokenization/: tokenize.cpp  tokenize.hpp
src/visitors/: forward_decl.hpp  interpreter.cpp  interpreter.hpp  llvm_codegen_visitor.cpp  llvm_codegen_visitor.hpp  print_visitor.cpp  print_visitor.hpp  scope_tree_visitor.cpp  scope_tree_visitor.hpp  type_checker_visitor.cpp  type_checker_visitor.hpp  visitor.hpp
